# solar-pv-forecast

./: .gitignore  CLAUDE.md  INSTRUCTIONS.md  Makefile  README.md  pyproject.toml
models/: lightgbm_features.json  training_summary.json  tuned_lgbm_params.json  walk_forward_summary.json
report/: technical_note.tex
src/analysis/: diagnose_bias.py
src/solar_pv_forecast/: __init__.py  cli.py  config.py  dashboard.py  utils.py
src/solar_pv_forecast/data/: fetch_nwp.py  fetch_pv_capacity.py  fetch_target.py  fetch_weather.py  harmonise.py
src/solar_pv_forecast/model/: evaluate.py  features.py  train.py  tune.py  walk_forward.py
src/solar_pv_forecast/proxy/: build_proxy.py
tests/: test_data.py  test_features.py  test_leakage.py  test_models.py  test_pipeline.py  test_sanity.py
